social icon alignment issues resolved

--- a/src/Footer/Footer.scss
+++ b/src/Footer/Footer.scss
@@ -34,28 +34,29 @@
 
     #social {
         position: absolute;
-        right: 1%;
+        right: 2%;
         top: 50%;
         transform: translateY(-50%);
         text-align: center;
         
-
         #copy {
             color: $white;
+        }
+
+        a:nth-child(1), a:nth-child(2), a:nth-child(3) {
+            margin-right: 20px;  
         }
 
         i {
             color: $white;
             font-size: 2.5rem;
-            margin-right: 20px;
             transition: all 0.25s ease-in-out;
-            
 
             &:hover {
                 color: red;
                 cursor: pointer;
                 transition: all 0.25s ease-in-out;
-            }
+            }  
         }
     }
 }
